--- a/docker/mlperf-inference-v0.5.openvino/Dockerfile.ubuntu-20.04
+++ b/docker/mlperf-inference-v0.5.openvino/Dockerfile.ubuntu-20.04
@@ -124,13 +124,10 @@ RUN ck compile ck-openvino:program:mlperf-inference-v0.5
 
 
 #-----------------------------------------------------------------------------#
-# Step 4. Install the first 500 images of the ImageNet 2012 validation dataset.
-# TODO: Create a calibration dataset.
+# Step 4. Install the first 500 images of the ImageNet 2012 validation dataset
+# to use as the calibration dataset for image classification models.
 #-----------------------------------------------------------------------------#
-RUN ck install package --tags=dataset,imagenet,val,min --no_tags=resized
-RUN ck install package --tags=dataset,imagenet,aux
-# The OpenVINO program expects to find val_map.txt in the dataset directory.
-RUN head -n 500 `ck locate env --tags=aux`/val.txt > `ck locate env --tags=val`/val_map.txt
+RUN ck install package --tags=dataset,imagenet,cal,all.500
 # Install misc Python dependencies required for calibration.
 RUN ${CK_PYTHON}  -m pip install --user \
     nibabel pillow progress py-cpuinfo pyyaml shapely sklearn tqdm xmltodict yamlloader
@@ -143,7 +140,7 @@ RUN ck install package --tags=lib,python-package,cv2,opencv-python-headless
 # Step 5. Install the official ResNet model for MLPerf Inference v0.5
 # and convert it into the OpenVINO format.
 #-----------------------------------------------------------------------------#
-RUN ck install package --tags=image-classification,model,tf,mlperf,resnet
+RUN ck install package --tags=model,tf,mlperf,resnet --no_tags=ssd
 RUN ck install package --tags=model,openvino,resnet50
 #-----------------------------------------------------------------------------#
 
@@ -152,7 +149,7 @@ RUN ck install package --tags=model,openvino,resnet50
 # Step 6. Install the official MobileNet model for MLPerf Inference v0.5
 # and convert it into the OpenVINO format.
 #-----------------------------------------------------------------------------#
-RUN ck install package --tags=image-classification,model,tf,mlperf,mobilenet-v1-1.0-224,non-quantized
+RUN ck install package --tags=model,tf,mlperf,mobilenet-v1-1.0-224,non-quantized
 RUN ck install package --tags=model,openvino,mobilenet
 #-----------------------------------------------------------------------------#
 
@@ -186,6 +183,8 @@ RUN ck install package --tags=tool,coco,api
 #-----------------------------------------------------------------------------#
 # Allow the program create tmp files when running under an external user.
 RUN chmod -R g+rwx `ck find ck-openvino:program:mlperf-inference-v0.5`
+# The program expects to find val_map.txt in the dataset directory (segfaults otherwise).
+RUN head -n 500 `ck locate env --tags=aux`/val.txt > `ck locate env --tags=raw,val`/val_map.txt
 #-----------------------------------------------------------------------------#
 
 
