--- a/docker/speech-recognition.rnnt/Dockerfile.centos7
+++ b/docker/speech-recognition.rnnt/Dockerfile.centos7
@@ -18,16 +18,17 @@ RUN yum upgrade -y\
  openssl-devel bzip2-devel libffi-devel\
  && yum clean all
 
-# Install Python 3.
+# Install Python 3.7. (If upgrading, also change CK_PYTHON below.)
+ENV PYTHON_VER=3.7.7
 RUN cd /usr/src \
- && wget https://www.python.org/ftp/python/3.7.7/Python-3.7.7.tgz \
- && tar xzf Python-3.7.7.tgz \
- && rm Python-3.7.7.tgz \
- && cd Python-3.7.7 \
+ && wget https://www.python.org/ftp/python/${PYTHON_VER}/Python-${PYTHON_VER}.tgz \
+ && tar xzf Python-${PYTHON_VER}.tgz \
+ && rm Python-${PYTHON_VER}.tgz \
+ && cd Python-${PYTHON_VER} \
  && ./configure --enable-optimizations \
  && make altinstall \
  && cd /usr/src \
- && rm -rf Python-3.7.7*
+ && rm -rf Python-${PYTHON_VER}*
 
 # Create non-root user.
 RUN useradd --create-home --user-group --shell /bin/bash dvdt
@@ -51,6 +52,8 @@ RUN cd ${CK_ROOT} \
  && ${CK_PYTHON} setup.py install --user \
  && ${CK_PYTHON} -c "import ck.kernel as ck; print ('Collective Knowledge v%s' % ck.__version__)"
 
+RUN echo 1
+
 # Pull CK repositories (including ck-env, ck-autotuning and ck-tensorflow).
 RUN ck pull repo:ck-mlperf
 RUN ck pull repo:ck-pytorch
@@ -58,12 +61,55 @@ RUN ck pull repo:ck-pytorch
 # Use generic Linux settings with dummy frequency setting scripts.
 RUN ck detect platform.os --platform_init_uoa=generic-linux-dummy
 
+
+#-----------------------------------------------------------------------------#
+# Step 1. Install C++ dependencies (FLAC, SoX).
+#-----------------------------------------------------------------------------#
 # Detect C/C++ compiler (gcc).
 RUN ck detect soft:compiler.gcc --full_path=`which ${CK_CC}`
-# Detect Python.
-RUN ck detect soft:compiler.python --full_path=`which ${CK_PYTHON}`
+# Install FLAC library.
+RUN ck install package --tags=tool,flac
+# Install SoX library.
+RUN ck install package --tags=tool,sox
+#-----------------------------------------------------------------------------#
+
+
+#-----------------------------------------------------------------------------#
+# Step 2. Install Python dependencies (pip, SoX, pandas, PyTorch).
+#-----------------------------------------------------------------------------#
 # Install the latest Python package installer (pip).
 RUN ${CK_PYTHON} -m pip install --ignore-installed pip setuptools --user
+# Detect Python interpreter ("compiler").
+RUN ck detect soft:compiler.python --full_path=`which ${CK_PYTHON}`
+# Install Python SoX package.
+RUN ck install package --tags=python-package,sox
+# Install Python pandas package.
+RUN ck install package --tags=python-package,pandas
+# Install the latest PyTorch.
+RUN ${CK_PYTHON} -m pip install torch --user
+RUN echo "latest" | ck detect soft:lib.pytorch
+# Install other dependencies.
+#-----------------------------------------------------------------------------#
 
+
+#-----------------------------------------------------------------------------#
+# Step 3. Download the official MLPerf Inference RNNT dataset (LibriSpeech
+# dev-clean) and preprocess it to wav. TODO: Clean the original dataset?
+#-----------------------------------------------------------------------------#
+RUN ck install package --tags=dataset,speech-recognition,dev-clean,original
+RUN ${CK_PYTHON} -m pip install tqdm pylzma --user
+RUN ck install package --tags=dataset,speech-recognition,dev-clean,preprocessed
+#-----------------------------------------------------------------------------#
+
+
+#-----------------------------------------------------------------------------#
+# Step 4. Download the official MLPerf Inference RNNT model.
+#-----------------------------------------------------------------------------#
+RUN ck install package --tags=model,pytorch,rnnt --install_path=${CK_TOOLS}
+#-----------------------------------------------------------------------------#
+
+
+#-----------------------------------------------------------------------------#
 # Run the Speech Recognition RNNT program.
-CMD ["echo TODO."]
+#-----------------------------------------------------------------------------#
+CMD ["ck run program:speech-recognition-pytorch"]
