--- a/docker/speech-recognition.rnnt/Dockerfile.centos7
+++ b/docker/speech-recognition.rnnt/Dockerfile.centos7
@@ -11,12 +11,17 @@ ENTRYPOINT ["/bin/bash", "-c"]
 # Install known system dependencies and immediately clean up to make the image smaller.
 # CK needs: git, wget, zip, unzip.
 # Python 3 needs: open-ssl-devel, bzip2-devel, libffi-devel.
+# NB: no GCC 4.8, no CMake 2.8.
 RUN yum upgrade -y\
  && yum install -y\
- make which patch gcc gcc-c++\
+ make which patch vim\
  git wget zip unzip\
  openssl-devel bzip2-devel libffi-devel\
  && yum clean all
+
+# Install GCC 8. (LoadGen needs C++14, while CentOS 7 comes with ancient GCC 4.)
+RUN yum install -y centos-release-scl \
+ && yum install -y devtoolset-8-gcc devtoolset-8-gcc-c++
 
 # Install Python 3.7. (If upgrading to 3.8 or higher, also change CK_PYTHON below.)
 ENV PYTHON_VERSION=3.7.7
@@ -24,11 +29,8 @@ RUN cd /usr/src \
  && wget https://www.python.org/ftp/python/${PYTHON_VERSION}/Python-${PYTHON_VERSION}.tgz \
  && tar xzf Python-${PYTHON_VERSION}.tgz \
  && rm Python-${PYTHON_VERSION}.tgz \
- && cd Python-${PYTHON_VERSION} \
- && ./configure --enable-optimizations \
- && make altinstall \
- && cd /usr/src \
- && rm -rf Python-${PYTHON_VERSION}*
+ && scl enable devtoolset-8 "cd /usr/src/Python-${PYTHON_VERSION} && ./configure --enable-optimizations && make altinstall" \
+ && rm -rf /usr/src/Python-${PYTHON_VERSION}*
 
 # Create non-root user.
 RUN useradd --create-home --user-group --shell /bin/bash dvdt
@@ -39,7 +41,7 @@ WORKDIR /home/dvdt
 ENV CK_ROOT=/home/dvdt/CK \
     CK_REPOS=/home/dvdt/CK_REPOS \
     CK_TOOLS=/home/dvdt/CK_TOOLS \
-    PATH=${CK_ROOT}/bin:/home/dvdt/.local/bin:${PATH} \
+    PATH=/opt/rh/devtoolset-8/root/usr/bin:${CK_ROOT}/bin:/home/dvdt/.local/bin:${PATH} \
     CK_PYTHON=python3.7 \
     CK_CC=gcc \
     GIT_USER="dividiti" \
@@ -64,29 +66,29 @@ RUN ck detect platform.os --platform_init_uoa=generic-linux-dummy
 #-----------------------------------------------------------------------------#
 # Detect C/C++ compiler (gcc).
 RUN ck detect soft:compiler.gcc --full_path=`which ${CK_CC}`
-# Install FLAC library.
+# Install preprocessing dependencies (FLAC, SoX).
 RUN ck install package --tags=tool,flac
-# Install SoX library.
 RUN ck install package --tags=tool,sox
 #-----------------------------------------------------------------------------#
 
 
 #-----------------------------------------------------------------------------#
-# Step 2. Install Python dependencies (pip, SoX, pandas, PyTorch).
+# Step 2. Install Python dependencies (pip, SoX, pandas, Abseil, wheel, PyTorch).
 #-----------------------------------------------------------------------------#
 # Install the latest Python package installer (pip).
 RUN ${CK_PYTHON} -m pip install --ignore-installed pip setuptools --user
 # Detect Python interpreter ("compiler").
 RUN ck detect soft:compiler.python --full_path=`which ${CK_PYTHON}`
-# Install Python SoX package.
+# Install preprocessing dependencies (SoX, pandas).
 RUN ck install package --tags=python-package,sox
-# Install Python pandas package.
 RUN ck install package --tags=python-package,pandas
+# Install LoadGen dependencies (Abseil, wheel).
+RUN ck install package --tags=python-package,absl
+RUN ${CK_PYTHON} -m pip install wheel --user
 # Install the latest PyTorch.
 RUN ${CK_PYTHON} -m pip install torch --user
 RUN echo "latest" | ck detect soft:lib.pytorch
-# Install other dependencies.
-# FIXME: Just a progress bar, can go?
+# Install Python tqdm package (preprocessing dep). FIXME: Just a progress bar, can go?
 RUN ${CK_PYTHON} -m pip install tqdm --user
 #-----------------------------------------------------------------------------#
 
@@ -112,9 +114,12 @@ RUN ck install package --tags=model,pytorch,rnnt --install_path=${CK_TOOLS}
 # Step 5. Download the MLPerf Inference repo with dividiti's RNNT tweaks.
 #-----------------------------------------------------------------------------#
 RUN ck install package --tags=mlperf,inference,source,dividiti.rnnt
+# Install Python LoadGen package.
+RUN ck install package --tags=python-package,loadgen
 #-----------------------------------------------------------------------------#
+
 
 #-----------------------------------------------------------------------------#
 # Run the Speech Recognition RNNT program.
 #-----------------------------------------------------------------------------#
-CMD ["ck run program:speech-recognition-pytorch-loadgen --cmd_key=performance"]
+CMD ["ck run program:speech-recognition-pytorch-loadgen --cmd_key=default"]
