--- a/docker/speech-recognition.rnnt/Dockerfile.amazonlinux
+++ b/docker/speech-recognition.rnnt/Dockerfile.amazonlinux
@@ -69,19 +69,18 @@ RUN ck install package --tags=tool,sox
 RUN ${CK_PYTHON} -m pip install --ignore-installed pip setuptools --user
 # Detect Python interpreter ("compiler").
 RUN ck detect soft:compiler.python --full_path=`which ${CK_PYTHON}`
+# Install PyTorch.
+RUN ck install package --tags=python-package,torch
 # Install preprocessing dependencies (SoX, pandas).
 RUN ck install package --tags=python-package,sox
-RUN ${CK_PYTHON} -m pip install --user pandas # FIXME: weird lib/lib64 issue when installing via CK
-RUN ${CK_PYTHON} -m pip install --user tqdm # FIXME: Just a progress bar, can go?
+RUN ck install package --tags=python-package,pandas
 # Install LoadGen dependencies (Abseil, wheel).
 RUN ck install package --tags=python-package,absl
 RUN ${CK_PYTHON} -m pip install --user wheel
-# Install the latest PyTorch.
-RUN ${CK_PYTHON} -m pip install --user torch
-RUN echo "latest" | ck detect soft:lib.pytorch
 # Install other program dependencies.
+# NB: tqdm is just a progress bar, can go?
 # NB: Fix numba version: https://github.com/librosa/librosa/issues/1160
-RUN ${CK_PYTHON} -m pip install --user toml unidecode inflect sndfile librosa numba==0.48
+RUN ${CK_PYTHON} -m pip install --user tqdm toml unidecode inflect sndfile librosa numba==0.48
 #-----------------------------------------------------------------------------#
 
 
@@ -90,25 +89,23 @@ RUN ${CK_PYTHON} -m pip install --user toml unidecode inflect sndfile librosa nu
 # dev-clean) and preprocess it to wav.
 #-----------------------------------------------------------------------------#
 RUN ck install package --tags=dataset,speech-recognition,dev-clean,original
-# NB: Can ignore the warning related to lzma compression.
+# NB: Can ignore the lzma related warning.
 RUN ck install package --tags=dataset,speech-recognition,dev-clean,preprocessed
-# TODO: Clean the original dataset?
 #-----------------------------------------------------------------------------#
 
 
 #-----------------------------------------------------------------------------#
 # Step 4. Download the official MLPerf Inference RNNT model.
 #-----------------------------------------------------------------------------#
-RUN ck install package --tags=model,pytorch,rnnt \
---install_path=${CK_TOOLS}/model-pytorch-mlperf-rnnt
+RUN ck install package --tags=model,pytorch,rnnt
 #-----------------------------------------------------------------------------#
 
 
 #-----------------------------------------------------------------------------#
-# Step 5. Download the MLPerf Inference repo with dividiti's RNNT tweaks.
+# Step 5. Download the MLPerf Inference repo with dividiti's RNNT tweaks,
+# and build the Python LoadGen API.
 #-----------------------------------------------------------------------------#
 RUN ck install package --tags=mlperf,inference,source,dividiti.rnnt
-# Install Python LoadGen package.
 RUN ck install package --tags=python-package,loadgen
 #-----------------------------------------------------------------------------#
 
