--- a/docker/speech-recognition.rnnt/Dockerfile.amazonlinux
+++ b/docker/speech-recognition.rnnt/Dockerfile.amazonlinux
@@ -63,7 +63,7 @@ RUN ck install package --tags=tool,sox
 
 
 #-----------------------------------------------------------------------------#
-# Step 2. Install Python dependencies (pip, SoX, pandas, Abseil, wheel, PyTorch).
+# Step 2. Install Python dependencies (pip, Torch, SoX, pandas, Abseil, wheel).
 #-----------------------------------------------------------------------------#
 # Install the latest Python package installer (pip).
 RUN ${CK_PYTHON} -m pip install --ignore-installed pip setuptools --user
@@ -113,4 +113,4 @@ RUN ck install package --tags=python-package,loadgen
 #-----------------------------------------------------------------------------#
 # Run the Speech Recognition RNNT program in the accuracy mode.
 #-----------------------------------------------------------------------------#
-CMD ["ck run program:speech-recognition-pytorch-loadgen --cmd_key=accuracy"]
+CMD ["ck run program:speech-recognition-pytorch-loadgen --cmd_key=accuracy --skip_print_timers"]
