Make Debian based images as similar as possible.

--- a/docker/speech-recognition.rnnt/Dockerfile.debian-9
+++ b/docker/speech-recognition.rnnt/Dockerfile.debian-9
@@ -63,28 +63,26 @@ RUN ck install package --tags=tool,sox
 
 
 #-----------------------------------------------------------------------------#
-# Step 2. Install Python dependencies (pip, SoX, pandas, Abseil, wheel, PyTorch).
+# Step 2. Install Python dependencies (pip, Torch, SoX, pandas, Abseil, wheel).
 #-----------------------------------------------------------------------------#
 # Install the latest Python package installer (pip).
 RUN ${CK_PYTHON} -m pip install --ignore-installed pip setuptools --user
 # Detect Python interpreter ("compiler").
 RUN ck detect soft:compiler.python --full_path=`which ${CK_PYTHON}`
+# Install PyTorch.
+RUN ck install package --tags=python-package,torch
 # Install preprocessing dependencies (SoX, pandas).
 RUN ck install package --tags=python-package,sox
 RUN ck install package --tags=python-package,pandas
-RUN ${CK_PYTHON} -m pip install --user tqdm # FIXME: Just a progress bar, can go?
 # Install LoadGen dependencies (Abseil, wheel).
 RUN ck install package --tags=python-package,absl
 RUN ${CK_PYTHON} -m pip install --user wheel
-# Install the latest PyTorch.
-RUN ${CK_PYTHON} -m pip install --user torch
-RUN echo "latest" | ck detect soft:lib.pytorch
 # Install other program dependencies.
 # NB: llvmlite is unvailable for Python 3.5 from 0.32.0: https://github.com/numba/llvmlite/issues/471
 RUN ${CK_PYTHON} -m pip install --user llvmlite --prefer-binary
-# NB: Fix numba version: https://github.com/librosa/librosa/issues/1160
+# NB: tqdm is just a progress bar, can go?
 # NB: numba 0.48 is unavailable for Python 3.5, hence 0.47.
-RUN ${CK_PYTHON} -m pip install --user toml unidecode inflect sndfile librosa numba==0.47
+RUN ${CK_PYTHON} -m pip install --user tqdm toml unidecode inflect sndfile librosa numba==0.47
 #-----------------------------------------------------------------------------#
 
 
@@ -93,25 +91,23 @@ RUN ${CK_PYTHON} -m pip install --user toml unidecode inflect sndfile librosa nu
 # dev-clean) and preprocess it to wav.
 #-----------------------------------------------------------------------------#
 RUN ck install package --tags=dataset,speech-recognition,dev-clean,original
-# NB: Can ignore the warning related to lzma compression.
+# NB: Can ignore the lzma related warning.
 RUN ck install package --tags=dataset,speech-recognition,dev-clean,preprocessed
-# TODO: Clean the original dataset?
 #-----------------------------------------------------------------------------#
 
 
 #-----------------------------------------------------------------------------#
 # Step 4. Download the official MLPerf Inference RNNT model.
 #-----------------------------------------------------------------------------#
-RUN ck install package --tags=model,pytorch,rnnt \
---install_path=${CK_TOOLS}/model-pytorch-mlperf-rnnt
+RUN ck install package --tags=model,pytorch,rnnt
 #-----------------------------------------------------------------------------#
 
 
 #-----------------------------------------------------------------------------#
-# Step 5. Download the MLPerf Inference repo with dividiti's RNNT tweaks.
+# Step 5. Download the MLPerf Inference repo with dividiti's RNNT tweaks,
+# and build the Python LoadGen API.
 #-----------------------------------------------------------------------------#
 RUN ck install package --tags=mlperf,inference,source,dividiti.rnnt
-# Install Python LoadGen package.
 RUN ck install package --tags=python-package,loadgen
 #-----------------------------------------------------------------------------#
 
@@ -119,4 +115,4 @@ RUN ck install package --tags=python-package,loadgen
 #-----------------------------------------------------------------------------#
 # Run the Speech Recognition RNNT program in the accuracy mode.
 #-----------------------------------------------------------------------------#
-CMD ["ck run program:speech-recognition-pytorch-loadgen --cmd_key=accuracy"]
+CMD ["ck run program:speech-recognition-pytorch-loadgen --cmd_key=accuracy --skip_print_timers"]
